[gd_scene load_steps=16 format=3 uid="uid://2yvq6yiiep7y"]

[ext_resource type="Script" uid="uid://0m4n6rkaaith" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://bauiwbplygtnb" path="res://menubg.png" id="1_ekxnf"]
[ext_resource type="Theme" uid="uid://bopntjqdsj2tt" path="res://assets/theme & stylebox/main_menu.tres" id="1_oa1go"]
[ext_resource type="StyleBox" uid="uid://bqgxatjmdvt3" path="res://assets/theme & stylebox/normal_button.tres" id="2_8ln24"]
[ext_resource type="Shader" uid="uid://cpqi5bms82xip" path="res://assets/theme & stylebox/main_menu.gdshader" id="3_flqon"]
[ext_resource type="StyleBox" uid="uid://bcpo8hk3kbhp2" path="res://assets/theme & stylebox/hover_button.tres" id="5_oa1go"]
[ext_resource type="AudioStream" uid="uid://c58xuubelc0cx" path="res://sounds/main.wav" id="7_jk1qb"]
[ext_resource type="FontFile" uid="uid://cp51f6s3yfdk4" path="res://assets/fonts/MinecraftBold-nMK1.otf" id="7_tbmy8"]
[ext_resource type="AudioStream" uid="uid://bw1ct8vmufhpw" path="res://sounds/opening.ogg" id="8_5dd4i"]
[ext_resource type="PackedScene" uid="uid://b4hbw1ggvfefj" path="res://scenes/option_menu.tscn" id="9_jk1qb"]
[ext_resource type="AudioStream" uid="uid://7fyb83esudxl" path="res://sounds/open.wav" id="10_lgwnu"]
[ext_resource type="AudioStream" uid="uid://cp6pabllh7fj6" path="res://sounds/close.wav" id="11_flqon"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu84c"]
texture = ExtResource("1_ekxnf")
modulate_color = Color(0.396889, 0.396889, 0.396889, 1)

[sub_resource type="Theme" id="Theme_tbmy8"]
Button/styles/hover = ExtResource("5_oa1go")
Button/styles/normal = ExtResource("2_8ln24")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rcqid"]
shader = ExtResource("3_flqon")
shader_parameter/blur_radius = 4.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oa1go")
script = ExtResource("1_bqqt6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wu84c")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.75
offset_top = -56.25
offset_right = 224.75
offset_bottom = 286.25
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_tbmy8")
region_rect = Rect2(0.243774, 0.908829, 128.531, 142.812)
patch_margin_left = 17
patch_margin_top = 19
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.875
offset_top = -127.0
offset_right = 180.875
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 33

[node name="StartButton" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start Game"
autowrap_trim_flags = 192

[node name="OptionsButton" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"
autowrap_trim_flags = 192

[node name="ExitButton" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit"
autowrap_trim_flags = 192

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.0
offset_top = 46.0
offset_right = 262.0
offset_bottom = 175.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("7_tbmy8")
theme_override_font_sizes/font_size = 96
text = "DEFINNITELY
not WorldBox"
horizontal_alignment = 1

[node name="BlurOverlay" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_rcqid")
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0.152941, 0.152941, 0.152941, 0.780392)

[node name="OptionsMenu" parent="." instance=ExtResource("9_jk1qb")]
layout_mode = 1

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jk1qb")
bus = &"SFX"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_5dd4i")
volume_db = -4.0
autoplay = true
bus = &"Music"

[node name="SwooshOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_lgwnu")
volume_db = -12.0
bus = &"SFX"

[node name="SwooshClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_flqon")
volume_db = -12.0
bus = &"SFX"

[connection signal="pressed" from="NinePatchRect/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
